# tailcall

./: Cargo.toml
.github/workflows/: benchmark.yml
autogen/: Cargo.toml
autogen/src/: main.rs
benches/: data_loader_bench.rs  impl_path_string_for_evaluation_context.rs  json_like_bench.rs  request_template_bench.rs
cli/: Cargo.toml
cli/src/: command.rs  error.rs  file.rs  fmt.rs  lib.rs  main.rs  tc.rs
cli/src/javascript/: http_filter.rs  runtime.rs  serde_v8.rs
cli/src/javascript/shim/: console.rs
cli/src/server/: http_1.rs  http_2.rs  server.rs  server_config.rs
cloudflare/: Cargo.toml  package.json
cloudflare/src/: lib.rs
cloudflare/tests/: foo.rs
examples/: jsonplaceholder.graphql
src/: async_cache.rs  cache.rs  lib.rs
src/auth/: basic.rs  context.rs  mod.rs  verify.rs
src/auth/jwt/: jwt_verify.rs
src/auth/tmp/: md5.rs  mod.rs
src/blueprint/: blueprint.rs  definitions.rs  from_config.rs  into_schema.rs  schema.rs
src/blueprint/operators/: call.rs  expr.rs
src/cli/javascript/: js_request.rs
src/cli/llm/: infer_type_name.rs
src/config/: config.rs
src/core/http/: request_handler.rs
src/grpc/: data_loader_request.rs  request_template.rs
src/http/: request_context.rs
src/lambda/: cache.rs  evaluation_context.rs  expression.rs  io.rs  modify.rs
tailcall-init/: Cargo.toml
tailcall-init/src/: main.rs
tailcall-io/: Cargo.toml
tailcall-io/src/: lib.rs
tailcall-io/src/http/native/: http_io.rs  mod.rs
tailcall-io/src/http/wasm/: http_io.rs  mod.rs
tests/: graphql_spec.rs  http_spec.rs  server_spec.rs
tests/core/: cors_integration_test.rs
wasm-core/: Cargo.toml
