[package]
name = "tailcall"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "autogen", "cli", "cloudflare", "tailcall-io", "wasm-core"]

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'thin'
debug = false
incremental = false
overflow-checks = false

[dev-dependencies]
wasm-core = {path = "wasm-core"}
async-graphql = { version = "7.0.1", features = [
    "dynamic-schema",
    "dataloader",
    "apollo_tracing",
] }
hyper = { version = "0.14", features = ["server"], default-features = false }
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
async-trait = "0.1.77"
anyhow = "1.0.79"
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0"
criterion = "0.5.1"
httpmock = "0.7.0"
pretty_assertions = "1.4.0"
stripmargin = "0.1.1"
derive_setters = "0.1.6"
futures-util = { version = "0.3.30" }
serde = { version = "1.0", features = ["derive"] }
url = "2.5.0"
regex = "1.10.3"
log = "0.4.20"
env_logger = "0.11.1"
serde_yaml = "0.9.31"
indexmap = "2.2"
once_cell = "1.19.0"

[[bench]]
name = "json_like_bench"
harness = false

[[bench]]
name = "request_template_bench"
harness = false

[[bench]]
name = "data_loader_bench"
harness = false

[[bench]]
name = "impl_path_string_for_evaluation_context"
harness = false
