[package]
name = "tailcall-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tailcall"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-core = {path = "../wasm-core"}
anyhow = "1.0.79"
moka = { version = "0.12.4", default-features = false, features = [
    "future",
]}
hyper-rustls = { version = "0.25.0"}
rustls = { version = "0.22.2"}
rustls-pemfile = { version = "1.0.4"}
rustls-pki-types = "1.1.0"
inquire = { version = "0.6.2"}
tokio = {version = "1.35.1",features = ["fs", "rt-multi-thread","rt"]}
ttl_cache = "0.5.1"
async-trait = "0.1.77"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2"
derive_setters = "0.1.6"
thiserror = "1.0.56"
env_logger = "0.11.0"
log = "0.4.20"
hyper = { version = "0.14", features = ["server"], default-features = false }
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
stripmargin = "0.1.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_urlencoded = "0.7.1"
futures-util = { version = "0.3.30" }
webbrowser = { version = "0.8.12", features = ["hardened", "disable-wsl"] }
which = "6.0.0"
update-informer = { version = "1.1.0", default-features = false, features = ["github", "reqwest"]}
async-std = "1.12.0"
lazy_static = "1.4.0"
mimalloc = "0.1.39"
exitcode = "1.1.2"

mini-v8 = { version = "0.4.1", optional = true }

[features]
js = ["dep:mini-v8"]

[dev-dependencies]
cache_control = "0.2.0"
httpmock = "0.7.0"
pretty_assertions = "1.4.0"