[package]
name = "cloudflare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hyper = { version = "0.14", default-features = false }
worker = "0.0.18"
tailcall = { path = "..", default-features = false }
lazy_static = "1.4.0"
anyhow = "1.0.79"
async-trait = "0.1.77"
reqwest = { version = "0.11", default-features = false }
async-std = "1.12.0"
wasm-logger = "0.2.0"
log = "0.4.20"
console_error_panic_hook = "0.1.7"
headers = "0.4.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
sha1 = "0.10.6"
md-5 = "0.11.0-pre.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 'z'
