[package]
name = "wasm-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = { version = "0.8.16", features = ["derive"] }
hyper = { version = "0.14", features = ["server"], default-features = false }
tokio = { version = "1.35.1", features = ["rt", "time"] }
anyhow = "1.0.79"
derive_setters = "0.1.6"
thiserror = "1.0.56"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_urlencoded = "0.7.1"
url = { version = "2", features = ["serde"] }
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
async-graphql = { version = "7.0.1", features = [
    "dynamic-schema",
    "dataloader",
    "apollo_tracing",
] }
async-graphql-value = "7.0.1"
indexmap = "2.2"
once_cell = "1.19.0"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2"
regex = "1.10.3"
reqwest-middleware = "0.2.4"
async-trait = "0.1.77"
serde_path_to_error = "0.1.15"
cache_control = "0.2.0"
nom = "7.1.3"
exitcode = "1.1.2"
log = "0.4.20"
env_logger = "0.11.1"
stripmargin = "0.1.1"
num_cpus = "1.16.0"
fnv = "1.0.7"
futures-channel = { version = "0.3.30" }
futures-timer = { version = "3.0.2", features = ["wasm-bindgen"] }
futures-util = { version = "0.3.30" }
lru = { version = "0.12.2" }
webbrowser = { version = "0.8.12", features = ["hardened", "disable-wsl"] }
async-std = { version = "1.12.0", features = [
    "wasm-bindgen-futures",
    "unstable",
] }
ttl_cache = "0.5.1"
protox = "0.5.1"
protox-parse = "0.5.0"
prost-reflect = { version = "0.12.0", features = ["serde"] }
prost = "0.12.3"

[dev-dependencies]
criterion = "0.5.1"
httpmock = "0.7.0"
pretty_assertions = "1.4.0"
stripmargin = "0.1.1"
